--- a/styles/style.css
+++ b/styles/style.css
@@ -198,7 +198,7 @@
 .code-example > code {
     overflow-y: scroll;
     overflow-x: scroll;
-    max-height: 512px;
+    max-height: 384px;
     margin: 0;
 }
 
@@ -213,7 +213,7 @@
 
 /* Track */
 .code-example > code::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     -webkit-border-radius: 8px;
     border-radius: 8px;
 }
@@ -222,8 +222,8 @@
 .code-example > code::-webkit-scrollbar-thumb {
     -webkit-border-radius: 8px;
     border-radius: 8px;
-    background: #80D2FF;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    background: rgba(128, 210, 255, 0.5);
+    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.5);
 }
 .code-example > code::-webkit-scrollbar-thumb:window-inactive {
     background: #CFDCE6;
