--- a/styles/style.css
+++ b/styles/style.css
@@ -253,6 +253,49 @@ h2 {
     justify-self: center;
 }
 
+.contacts-list {
+    display: table;
+    /*display: grid;*/
+    /*grid-template:*/
+    /*        " el1  el2 " auto*/
+    /*        " el1  el2 " auto*/
+    /*        " el1  el2 " auto /*/
+    /*          max-content   auto           ;*/
+    /*grid-template-columns: auto auto;*/
+}
+
+.contacts-list > li {
+    /*display: grid;*/
+    /*grid-template:*/
+    /*        " el1  el2 " auto*/
+    /*        " el1  el2 " auto*/
+    /*        " el1  el2 " auto !*/
+    /*          max-content   auto           ;*/
+    display: table-row;
+    position: relative;
+}
+
+.contacts-list > li::before {
+    position: absolute;
+    content: '';
+}
+
+.contacts-list > li > span {
+    display: table-cell;
+}
+
+.contacts-list > li span:first-child {
+    /*grid-area: el1;*/
+    /*grid-template-columns: subgrid;*/
+    /*!*grid-template-rows: repeat(1, min-content);*!*/
+}
+
+.contacts-list > li span:last-child {
+    /*grid-area: el2;*/
+    /*grid-template-columns: subgrid;*/
+    /*grid-template-rows: subgrid;*/
+}
+
 .code-example > code {
     overflow-y: scroll;
     overflow-x: scroll;
